# security_audit_tool

./: .gitignore  PUBLISH.md  README.md  audit  pyproject.toml
app/: __init__.py  cli.py  config.py  logging_setup.py  main.py  models.py  scope.py  tui.py
app/auth/: __init__.py  api_client.py  browser.py  commands.py  config.py  exceptions.py  models.py  renderers.py  service.py  token_store.py
app/checks/: __init__.py  base.py  containers_check.py  dependencies_check.py  firewall_check.py  hardening_check.py  load_test_check.py  performance_check.py  permissions_check.py  secrets_check.py  services_check.py  tls_check.py  vulnerability_check.py  webapp_config_check.py  website_risk_check.py
app/checks/website_risk/: __init__.py  analyzer.py  fetcher.py  models.py  parsers.py
app/collectors/: __init__.py  filesystem.py  network.py  packages.py  processes.py  system_info.py
app/core/: __init__.py  check_registry.py  check_runner.py  reporting.py  scan_modes.py  workflow.py
app/policy/: __init__.py  mappings.py  severity.py
app/report/: __init__.py  html_reporter.py  json_reporter.py  pdf_reporter.py  terminal_reporter.py
app/utils/: __init__.py  rate_limiter.py  subprocess_safe.py  timeouts.py  validators.py
docs/: ARCHITECTURE.md  COMMANDS.md  FEATURES.md  PENTEST.md  RUN.md  TECHNICAL.md  TROUBLESHOOTING.md
examples/: example-output.json  scope.yml
tests/: __init__.py  test_auth_api_client.py  test_auth_main.py  test_auth_service.py  test_auth_token_store.py  test_base_check.py  test_check_runner.py  test_models.py  test_scan_modes.py  test_scope.py  test_tui.py  test_validators.py  test_website_risk_check.py
