[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cache-wraith-audit-tool"
version = "1.0.0"
description = "Python security scanner with pentest mode - audit your website, API, or server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "cachewraith", email = "somonorhong011@gmail.com" }
]
keywords = ["security", "pentest", "audit", "vulnerability", "scanner", "website", "api", "ddos", "sql-injection", "xss"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "types-pyyaml>=6.0",
]

[project.scripts]
security-audit = "app.main:main"

[project.urls]
Homepage = "https://github.com/cachewraith/security_audit_tool"
Documentation = "https://github.com/cachewraith/security_audit_tool/blob/main/README.md"
Repository = "https://github.com/cachewraith/security_audit_tool.git"
Issues = "https://github.com/cachewraith/security_audit_tool/issues"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
